--- a/src/scss/catalog-products/catalog-products.scss
+++ b/src/scss/catalog-products/catalog-products.scss
@@ -121,6 +121,7 @@
       line-height: rem(21px);
       color: #273142;
       margin-bottom: rem(10px);
+      display: block;
     }
     &-description{
       font-size: rem(14px);
