--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,6 +5,7 @@
 @import "catalog-fence/catalog-fence";
 @import "catalog-metal/catalog-metal";
 @import "catalog-products/catalog-products";
+@import "current-product/current-product";
 /* NOTE - import here your style modules */
 // GLOBAL C
 @import 'media';
