--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,6 +6,7 @@
 @import "catalog-metal/catalog-metal";
 @import "catalog-products/catalog-products";
 @import "current-product/current-product";
+@import "product-fence/product-fence";
 /* NOTE - import here your style modules */
 // GLOBAL C
 @import 'media';
