--- a/src/scss/product-fence/_media.scss
+++ b/src/scss/product-fence/_media.scss
@@ -52,5 +52,50 @@
         }
       }
     }
+    &-about{
+      padding: rem(70px) 0;
+      img{
+        width: rem(100px);
+        height: rem(100px);
+      }
+      &__title{
+        margin-bottom: rem(64px);
+      }
+      &__nav{
+        display: none;
+      }
+      &__list {
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        justify-content: space-between;
+        grid-gap: rem(15px);
+        &-item {
+          display: grid;
+          grid-template-columns: rem(100px) 1fr;
+          grid-gap: rem(50px);
+          &.active{
+            display: grid;
+          }
+        }
+        &-info{
+          display: block;
+        }
+        &-advantages{
+          font-size: rem(14px);
+          line-height: rem(24px);
+        }
+        &-img{
+          display: flex;
+          justify-content: center;
+          margin-bottom: rem(30px);
+        }
+        &-title{
+          font-weight: bold;
+          font-size: rem(18px);
+          line-height: rem(30px);
+          color: #525A68;
+        }
+      }
+    }
   }
 }
