--- a/src/scss/global/_04-global.scss
+++ b/src/scss/global/_04-global.scss
@@ -222,7 +222,7 @@ input[type="radio"]{
 }
 // Action button
 .btn{
-	background: #FFC80A;
+	background-color: #FFC80A;
 	border-radius: 5px;
 	width: 100%;
 	height: 52px;
@@ -276,6 +276,8 @@ input[type="radio"]{
 		padding-inline-start: rem(15px);
 		position: relative;
 		background-color: #fff;
+		padding: rem(5px) rem(10px) rem(10px);
+		font-size: rem(17px);
 		&.required::after{
 			content: '';
 			display: block;
@@ -288,18 +290,45 @@ input[type="radio"]{
 			top: -16px;
 			right: rem(8px);
 		}
+		&-container{
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			color: #A5A9AF;
+		}
 		legend{
 			font-size: rem(12px);
 			color: var(--light-grey-color);
 		}
 	}
+	&__select-list{
+		position: absolute;
+		right: 0;
+		z-index: 1;
+		background-color: #fff;
+		left: -1px;
+		width: 100.3%;
+		top: 90%;
+		border-left: 1px solid #D4D6D9;
+		border-right: 1px solid #D4D6D9;
+		border-bottom: 1px solid #D4D6D9;
+		display: none;
+		&.active{
+			display: block;
+		}
+		&__item{
+			margin-bottom: rem(5px);
+			padding: rem(10px);
+			&:not(:last-child){
+				border-bottom: 1px solid #D4D6D9;
+			}
+		}
+	}
     &__textarea,&__input{
-		padding: 0 rem(10px) rem(10px) 0;
 		display: block;
 		width: 100%;
 		resize: none;
 		color: var(--light-grey-color);
-		font-size: rem(18px);
 		outline: none;
 	}
 	&__checkbox-container{
