--- a/src/scss/product-fence/_media.scss
+++ b/src/scss/product-fence/_media.scss
@@ -97,5 +97,11 @@
         }
       }
     }
+    &-steps{
+      padding: rem(70px) 0;
+      &__title{
+        margin-bottom: rem(84px);
+      }
+    }
   }
 }
