--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,7 @@
 @import "catalog-products/catalog-products";
 @import "current-product/current-product";
 @import "product-fence/product-fence";
+@import "calculator-fence/calculator-fence";
 /* NOTE - import here your style modules */
 // GLOBAL C
 @import 'media';
