add structure for catalog gates

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,7 @@
 @import "current-product/current-product";
 @import "product-fence/product-fence";
 @import "calculator-fence/calculator-fence";
+@import "catalog-gates/catalog-gates";
 /* NOTE - import here your style modules */
 // GLOBAL C
 @import 'media';
