Add catalog block for catalog gates page

--- a/src/scss/catalog-gates/_media.scss
+++ b/src/scss/catalog-gates/_media.scss
@@ -9,5 +9,19 @@
         display: none;
       }
     }
+    &-tab{
+      &__nav{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        padding-bottom: rem(40px);
+        border-bottom: 4px solid var(--grey-color);
+      }
+      &__container{
+        margin-top: rem(30px);
+      }
+      hr{
+        display: none;
+      }
+    }
   }
 }
