--- a/src/scss/catalog-gates/catalog-gates.scss
+++ b/src/scss/catalog-gates/catalog-gates.scss
@@ -25,6 +25,7 @@
     }
   }
   &-tab{
+    padding-bottom: rem(70px);
     &__nav{
       overflow: hidden;
       border-radius: rem(5px);
@@ -48,6 +49,28 @@
     }
     hr{
       margin-bottom: rem(20px);
+    }
+  }
+  &-advantages{
+    background-color: var(--grey-color);
+    &__list{
+      padding: rem(20px) 0;
+      &-img{
+        display: flex;
+        justify-content: center;
+        margin-bottom: rem(20px);
+        img{
+          width: rem(60px);
+          height: rem(60px);
+        }
+      }
+      &-title{
+        font-size: rem(18px);
+        line-height: rem(21px);
+        text-align: center;
+        color: #000000;
+        margin-bottom: rem(41px);
+      }
     }
   }
 }
