--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,6 +9,7 @@
 @import "product-fence/product-fence";
 @import "calculator-fence/calculator-fence";
 @import "catalog-gates/catalog-gates";
+@import "product-gates/product-gates";
 /* NOTE - import here your style modules */
 // GLOBAL C
 @import 'media';
