--- a/src/scss/current-product/_media.scss
+++ b/src/scss/current-product/_media.scss
@@ -65,7 +65,7 @@
         margin-bottom: rem(15px);
       }
       &-value{
-        font-size: rem(36px);
+        font-size: rem(31px);
         line-height: rem(42px);
       }
     }
@@ -81,6 +81,40 @@
       &-buttons{
         grid-template-columns: repeat(2,1fr);
         grid-gap: rem(30px);
+      }
+    }
+    &__char-table{
+      display: table;
+      margin-bottom: rem(15px);
+      &__tr{
+        display: table-row;
+        .current-product__char-table__td:first-child{
+          color: #525A68;
+          padding-right: rem(25px);
+        }
+      }
+      &__td{
+        display: table-cell;
+        font-size: rem(14px);
+        line-height: rem(24px);
+        color: #A5A9AF;
+      }
+    }
+    &__content{
+      grid-gap: rem(30px);
+      grid-template-columns: 2fr 1fr;
+      height: 100%;
+      &-img{
+        height: 100%;
+        object-fit: cover;
+      }
+      &-advantages{
+        background: #FFFFFF;
+        box-shadow: 0px 0px 50px rgba(218, 229, 235, 0.5);
+        border-radius: 5px;
+        grid-template-columns: 100%;
+        height: 100%;
+        padding: rem(45px) rem(25px);
       }
     }
   }
