--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,6 +10,7 @@
 @import "calculator-fence/calculator-fence";
 @import "catalog-gates/catalog-gates";
 @import "product-gates/product-gates";
+@import "catalog-automatic/catalog-automatic";
 /* NOTE - import here your style modules */
 // GLOBAL C
 @import 'media';
