--- a/src/scss/catalog-automatic/catalog-automatic.scss
+++ b/src/scss/catalog-automatic/catalog-automatic.scss
@@ -49,7 +49,7 @@
       &__header{
         border-radius: 5px;
         background-color: var(--grey-color);
-        padding: rem(20px) rem(15px);
+        padding: rem(15px);
         display: flex;
         justify-content: space-between;
         align-items: center;
