--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,6 +11,7 @@
 @import "catalog-gates/catalog-gates";
 @import "product-gates/product-gates";
 @import "catalog-automatic/catalog-automatic";
+@import "service-page/service-page";
 /* NOTE - import here your style modules */
 // GLOBAL C
 @import 'media';
