--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,6 +12,7 @@
 @import "product-gates/product-gates";
 @import "catalog-automatic/catalog-automatic";
 @import "service-page/service-page";
+@import "blog/blog";
 /* NOTE - import here your style modules */
 // GLOBAL C
 @import 'media';
