--- a/src/components/bem-blocks/global/popup/popup.scss
+++ b/src/components/bem-blocks/global/popup/popup.scss
@@ -49,5 +49,10 @@
       grid-gap: rem(20px);
     }
   }
+  &-blog{
+    .popup-form__container{
+      grid-template-columns: 100%;
+    }
+  }
 }
 @import "media";
