--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,6 +13,7 @@
 @import "catalog-automatic/catalog-automatic";
 @import "service-page/service-page";
 @import "blog/blog";
+@import "blog-page/blog-page";
 /* NOTE - import here your style modules */
 // GLOBAL C
 @import 'media';
