--- a/src/scss/blog-page/blog-page.scss
+++ b/src/scss/blog-page/blog-page.scss
@@ -38,7 +38,7 @@
         }
         &__list{
           display: grid;
-          grid-template-columns: repeat(5,1fr);
+          grid-template-columns: repeat(5,max-content);
           grid-gap: rem(5px);
           align-items: center;
           color: var(--yellow-color);
@@ -87,6 +87,205 @@
             margin-right: rem(10px);
           }
         }
+      }
+    }
+  }
+  &-nav{
+    margin-bottom: rem(20px);
+    p:not(:last-child),h1,h2,h3,h4,h5,h6,ol,ul,li{
+        margin-bottom: rem(10px);
+    }
+    &__container{
+      display: grid;
+      grid-template-columns: 100%;
+      grid-gap: rem(20px);
+    }
+    &__wrapper{
+      background-color: var(--grey-color);
+      margin-left: -2rem;
+      margin-right: -2rem;
+      padding: rem(20px) 2rem;
+      &.active{
+        i{
+          transform: rotate(-180deg);
+        }
+        .blog-page-nav__list{
+          display: block;
+        }
+      }
+    }
+    &__header{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      i{
+        transition: all 500ms ease-in-out;
+      }
+      &-title{
+        font-weight: bold;
+        font-size: rem(18px);
+        line-height: rem(30px);
+        color: #273142;
+      }
+    }
+    &__list{
+      padding-top: rem(10px);
+      padding-left: 15px;
+      display: none;
+      &-item{
+        list-style-type: circle;
+        &:not(:last-child){
+          margin-bottom: rem(10px);
+        }
+      }
+    }
+  }
+  &-content{
+    padding-bottom: rem(20px);
+    p,h1,h2,h3,h4,h5,h6,li,blockquote,table{
+      margin-bottom: rem(10px);
+    }
+    blockquote{
+      border-radius: 5px;
+      padding: rem(20px);
+      background-color: var(--grey-color);
+      display: grid;
+      grid-template-columns: 100%;
+      grid-gap: rem(20px);
+      &::before{
+        content: '“';
+        text-align: center;
+        line-height: rem(140px);
+        font-size: 9rem;
+        display: block;
+        height: rem(50px);
+        color: var(--yellow-color);
+      }
+    }
+    ul:not([class]){
+      padding-left: 0;
+      li{
+        display: grid;
+        grid-template-columns: rem(8px) 1fr;
+        grid-gap: rem(10px);
+        &::before{
+          content: '';
+          display: block;
+          width: rem(8px);
+          height: rem(8px);
+          border: 1px solid #FFC80A;
+          background-color: #fff;
+          border-radius: 50%;
+          margin-top: 4px;
+        }
+      }
+    }
+    ol:not([class]){
+      counter-reset: ol;
+      padding-left: 0;
+      li{
+        list-style: none;
+        display: grid;
+        grid-template-columns: rem(20px) 1fr;
+        grid-gap: rem(10px);
+        &::before{
+          counter-increment: ol;
+          content: counter(ol);
+          height: rem(20px);
+          border: rem(2px) solid #DAE5EB;
+          box-sizing: border-box;
+          border-radius: 5px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          font-size: rem(12px);
+          line-height: rem(30px);
+          text-align: center;
+          color: #000000;
+          margin-top: rem(2px);
+        }
+      }
+    }
+    &__table{
+      margin-left: -2rem;
+      margin-right: -2rem;
+      overflow-x: scroll;
+    }
+    table{
+      border-collapse: collapse;
+      width: 100%;
+    }
+    tr{
+      border-bottom: 1px solid var(--grey-color);
+      &:first-child{
+        color: #fff;
+        background: #FC6D2B;
+        border-bottom: 0;
+      }
+      &:nth-child(2n+3){
+        background-color: #F9FAFC;
+      }
+    }
+    td{
+      padding: rem(16px);
+      text-align: center;
+      white-space: nowrap;
+    }
+    &__other-page{
+      margin-bottom: rem(10px);
+      display: grid;
+      grid-template-columns: 100%;
+      grid-gap: rem(22px);
+      &__img{
+        img{
+          display: block;
+          width: 100%;
+          border-radius: 5px;
+        }
+      }
+      &__content{
+        &-title{
+          font-weight: bold;
+          font-size: rem(24px);
+          line-height: rem(28px);
+          color: #333333;
+          margin-bottom: rem(5px);
+        }
+        &-more{
+          color: #525A68;
+          display: block;
+          width: max-content;
+          border-bottom: 1px solid var(--yellow-color);
+        }
+      }
+    }
+  }
+  &-rate{
+   &__container{
+     background: #FFFFFF;
+     box-shadow: 0px 0px 50px rgba(218, 229, 235, 0.5);
+     border-radius: 5px;
+     padding: rem(20px);
+   }
+    &__socials{
+      &-title{
+        font-size: rem(18px);
+        line-height: rem(21px);
+        color: #000000;
+        margin-bottom: rem(20px);
+      }
+    }
+    &__star{
+      &-title{
+        font-weight: bold;
+        font-size: rem(24px);
+        line-height: rem(28px);
+        color: #000000;
+        text-align: center;
+        margin-bottom: rem(11px);
+      }
+      &-list{
+        justify-content: center;
       }
     }
   }
