sales page is ready

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,6 +14,7 @@
 @import "service-page/service-page";
 @import "blog/blog";
 @import "blog-page/blog-page";
+@import "sales/sales";
 /* NOTE - import here your style modules */
 // GLOBAL C
 @import 'media';
